# beagle-cpp

./: README.md  cstring.h
impute/: CMakeLists.txt  Communication Protocol.txt  baumhmm.cpp  baumhmm.h  consensusphaser.cpp  consensusphaser.h  dag.cpp  dag.h  genotypecorrection.cpp  genotypecorrection.h  hapalleleprobs.cpp  hapalleleprobs.h  haplotypepair.cpp  haplotypepair.h  ibshapsegments.cpp  ibshapsegments.h  imputationdata.cpp  imputationdata.h  imputedriver.cpp  imputedriver.h  iointerface.cpp  iointerface.h  markers.cpp  markers.h  phase.cpp  phase.h  recombbaum.cpp  recombbaum.h  samplerdata.cpp  samplerdata.h  samples.cpp  samples.h  singlepermittedstates.cpp  singlepermittedstates.h  vcfEmission.cpp  vcfEmission.h  workerrunner.cpp  workerrunner.h
impute/cmdtools/: CMakeLists.txt  imputec.cpp  imputeopts.h  svs_impute_client.cpp
impute/tests/: CMakeLists.txt  Communication Protocol.txt  Input Output Control Flow.txt  Random Number Usage.txt  haptests.h  test_impute_datastructures.cpp
